--- a/estilos.css
+++ b/estilos.css
@@ -1,8 +1,11 @@
-/* PHONE */
 *{
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 }
+/* PHONE */
+
+/* NAV */
 header{
     display: flex;
     padding: 2rem;
@@ -51,6 +54,48 @@ header{
 #closeNav{
     color: white;
 }
+
+/* BODY */
+
+#imgBanner{
+    width: 48vh;
+    height: 70vh;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+#divPresentacion{
+    font-size: 15px;
+    text-align: center;
+}
+#divDestacados{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
+    align-content: center;
+    justify-content: center;
+}
+.productos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 10rem;
+    border: 3px solid black;
+}
+.imgProd{
+    width: 10rem;
+    height: 10rem;
+}
+
+
+
+
 /* TABLET */
 @media (min-width: 700px) {
     body{
